...
                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login-screen" translatesAutoresizingMaskIntoConstraints="NO" id="Xow-Jj-tGe">
                            <rect key="frame" x="0.0" y="0.0" width="345" height="200"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="200" id="Rez-2t-FcI"/>
                            </constraints>
                        </imageView>
                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Добро пожаловать в Cinemagic!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MO9-ox-20e">
                            <rect key="frame" x="0.0" y="200" width="345" height="60"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="60" id="MC6-Io-ZhL"/>
                            </constraints>
                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                            <color key="textColor" name="text-medium"/>
...
                                    <userDefinedRuntimeAttributes>
                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                            <real key="value" value="8"/>
                                        </userDefinedRuntimeAttribute>
                                        <userDefinedRuntimeAttribute type="string" keyPath="leftIconString" value="sign-in"/>
                                        <userDefinedRuntimeAttribute type="string" keyPath="leftIconFontName" value="fa"/>
                                        <userDefinedRuntimeAttribute type="string" keyPath="titleString" value="Вход"/>
                                        <userDefinedRuntimeAttribute type="boolean" keyPath="showTouchFeedback" value="YES"/>
                                        <userDefinedRuntimeAttribute type="color" keyPath="bgColor">
                                            <color key="value" name="button-background"/>
                                        </userDefinedRuntimeAttribute>
                                        <userDefinedRuntimeAttribute type="color" keyPath="titleColor">
                                            <color key="value" name="background"/>
...
                                        </userDefinedRuntimeAttribute>
                                        <userDefinedRuntimeAttribute type="color" keyPath="bgColor">
                                            <color key="value" name="button-background-light"/>
                                        </userDefinedRuntimeAttribute>
                                        <userDefinedRuntimeAttribute type="string" keyPath="rightIconString" value="address-card-o"/>
                                        <userDefinedRuntimeAttribute type="string" keyPath="rightIconFontName" value="fa"/>
                                        <userDefinedRuntimeAttribute type="string" keyPath="titleString" value="Регистрация"/>
                                        <userDefinedRuntimeAttribute type="boolean" keyPath="showTouchFeedback" value="YES"/>
                                        <userDefinedRuntimeAttribute type="color" keyPath="titleColor">
                                            <color key="value" name="background"/>
                                        </userDefinedRuntimeAttribute>
                                        <userDefinedRuntimeAttribute type="color" keyPath="rightIconColor">
                                            <color key="value" name="background"/>
...
