...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="rOn-P3-U0M" id="9yO-Gm-bM1"/>
                            <outlet property="delegate" destination="rOn-P3-U0M" id="FsC-eY-xjA"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Премьеры" largeTitleDisplayMode="always" id="flH-uv-oxC">
                        <barButtonItem key="leftBarButtonItem" systemItem="stop" id="Ytj-gj-RCu">
                            <color key="tintColor" name="text-dark"/>
                            <connections>
                                <action selector="logout:" destination="rOn-P3-U0M" id="cZV-WD-FHW"/>
                            </connections>
                        </barButtonItem>
...
                                                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
                                                                <color key="value" name="button-background-light"/>
                                                            </userDefinedRuntimeAttribute>
                                                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
                                                                <real key="value" value="1"/>
                                                            </userDefinedRuntimeAttribute>
                                                            <userDefinedRuntimeAttribute type="string" keyPath="titleString" value="Коснитесь чтобы загрузить постер"/>
                                                            <userDefinedRuntimeAttribute type="color" keyPath="titleColor">
                                                                <color key="value" name="text-light"/>
                                                            </userDefinedRuntimeAttribute>
                                                        </userDefinedRuntimeAttributes>
                                                        <connections>
                                                            <action selector="selectPoster:" destination="7XO-ap-3IA" eventType="touchUpInside" id="C6K-fj-ll5"/>
...
                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                        <real key="value" value="8"/>
                                    </userDefinedRuntimeAttribute>
                                    <userDefinedRuntimeAttribute type="color" keyPath="titleColor">
                                        <color key="value" name="background"/>
                                    </userDefinedRuntimeAttribute>
                                    <userDefinedRuntimeAttribute type="string" keyPath="titleString" value="Забронировать билет"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <action selector="ticket:" destination="Jh7-Cx-zBo" eventType="touchUpInside" id="shv-iV-YOd"/>
                                </connections>
                            </view>
                            <view alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5CZ-QT-ixN">
...
