...
        }
        self.titleLabel.text = movie.title
        self.descriptionLabel.text = movie.description
        self.showtimeLabel.text = dateFormatter.string(from: movie.showtime)

        if movie.hasTicket {
            ticketButton.titleString = "Отменить бронирование"
            ticketButton.bgColor = #colorLiteral(red: 0.7764705882, green: 0.1568627451, blue: 0.1568627451, alpha: 1)
        } else if movie.tickets == 0 {
            ticketButton.titleString = "Нет билетов"
            ticketButton.bgColor = #colorLiteral(red: 0.2901960784, green: 0.462745098, blue: 0.5882352941, alpha: 1)
        } else {
            ticketButton.titleString = "Забронировать билет"
...
